Tweaked mobile styling to fix right side overflow

--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -5,7 +5,7 @@
 }
 
 .section--background {
-  padding: 1.45rem 1.0875rem 1.45rem 1.0875rem;
+  padding: 1.45rem 0;
 }
 
 .section--dark {
